:bug: disable scrollbar-related settings on Firefox

--- a/src/css/options/index.css
+++ b/src/css/options/index.css
@@ -25,6 +25,10 @@ body {
   line-height: 1.4;
 }
 
+body.-browser-firefox [data-hidden-firefox] {
+  display: none;
+}
+
 /*
   Main container
  */
